Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Cesstestthisorg.GitHub.io by cesstestthisorg</title>
+    <title>Tunapanda Swag Documentation by cesstestthisorg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Cesstestthisorg.GitHub.io</h1>
+      <h1 class="project-name">Tunapanda Swag Documentation</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
